--- a/package.json
+++ b/package.json
@@ -9,24 +9,44 @@
     "start": "react-native start",
     "test": "jest"
   },
-
   "dependencies": {
+    "@gluestack-style/react": "^1.0.41",
+    "@gluestack-ui/config": "^1.0.13",
+    "@gluestack-ui/themed": "^1.0.37",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/flash-list": "^1.6.3",
     "curved-bottom-navigation-bar": "^2.0.5",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-actions-sheet": "^0.9.0-alpha.24",
+    "react-native-check-box": "^2.1.7",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localization": "^2.3.2",
     "react-native-optimized-flatlist": "^1.0.4",
+    "react-native-otp-textinput": "^1.1.5",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-virtualized-view": "^1.0.0"
+    "react-native-virtualized-view": "^1.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,6 +57,7 @@
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-countdown-component": "^2.7.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
