--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply plugin: 'com.google.gms.google-services'
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -75,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.sushain.marketplace"
+    namespace "com.sushain"
     defaultConfig {
-        applicationId "com.sushain.marketplace"
+        applicationId "com.sushain"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -109,13 +108,6 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
-
-    //Firebase
-   implementation platform('com.google.firebase:firebase-bom:32.1.0')
-   implementation 'com.google.firebase:firebase-analytics-ktx'
-
-    //svg
-   implementation project(':react-native-svg')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
