--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/themed": "^1.0.37",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.2",
+    "@react-native-community/progress-view": "^1.4.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -22,16 +23,21 @@
     "@shopify/flash-list": "^1.6.3",
     "curved-bottom-navigation-bar": "^2.0.5",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-check-box": "^2.1.7",
     "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.6",
+    "react-native-document-picker": "^9.1.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localization": "^2.3.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-otp-textinput": "^1.1.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -41,6 +47,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^14.1.0",
