--- a/ios/sushain/Info.plist
+++ b/ios/sushain/Info.plist
@@ -54,5 +54,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<!-- pg cashfree -->
+<key>LSApplicationCategoryType</key>
+<string></string>
+<key>LSApplicationQueriesSchemes</key>
+<array>
+<string>phonepe</string>
+<string>tez</string>
+<string>paytm</string>
+<string>bhim</string>
+</array>
+
+	<!-- pg cashfree -->
 </dict>
 </plist>
