--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@shopify/flash-list": "^1.6.3",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.7",
     "curved-bottom-navigation-bar": "^2.0.5",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
@@ -39,6 +41,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localization": "^2.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
