--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -14,6 +14,10 @@
       "sha1": "47ff07c75746682133b81e7ac0537ce50a4c9916"
     },
     {
+      "path": "src/assets/fonts/Inter-Light.ttf",
+      "sha1": "cbb2506d8da21edbb2dc8cfa26e3b42a97d138f8"
+    },
+    {
       "path": "src/assets/fonts/Inter-Medium.ttf",
       "sha1": "e76f580811e031813e7150131a0724811cdd737a"
     },
