--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.6",
+    "react-native-device-info": "^10.12.0",
     "react-native-document-picker": "^9.1.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.1",
@@ -44,6 +45,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localization": "^2.3.2",
+    "react-native-localize": "^3.0.6",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-optimized-flatlist": "^1.0.4",
