--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.1.0",
     "@shopify/flash-list": "^1.6.3",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
@@ -52,6 +53,7 @@
     "react-native-otp-textinput": "^1.1.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.8.2",
@@ -63,6 +65,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-virtualized-view": "^1.0.0",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
