--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,6 +117,11 @@ android {
 }
 
 dependencies {
+   
+   //video SDK
+   implementation project(':rnwebrtc')
+   implementation project(':rnfgservice')
+
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
