--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,6 +40,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
+/* This one fixes a weird WebRTC runtime problem on some devices. */
+android.enableDexingArtifactTransform.desugaring=false
+
 
 MYAPP_UPLOAD_STORE_FILE=my-sushain-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
