--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@shopify/flash-list": "^1.6.3",
     "@tanstack/react-query": "^5.17.19",
+    "@videosdk.live/react-native-incallmanager": "^0.1.0",
+    "@videosdk.live/react-native-sdk": "^0.1.4",
     "axios": "^1.6.7",
     "curved-bottom-navigation-bar": "^2.0.5",
     "formik": "^2.4.5",
