--- a/ios/sushainTests/Info.plist
+++ b/ios/sushainTests/Info.plist
@@ -20,5 +20,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+
+	<key>NSCameraUsageDescription</key>
+    <string>Camera permission description</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Microphone permission description</string>
 </dict>
 </plist>
