--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-virtualized-view": "^1.0.0",
+    "react-native-webrtc": "^118.0.1",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
