--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/themed": "^1.0.37",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.2",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-native-community/progress-view": "^1.4.2",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/messaging": "^18.8.0",
