--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,10 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    
+    //video sdk
+    implementation project(':rnwebrtc')
+    implementation project(':rnfgservice')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
