--- a/ios/sushain/Info.plist
+++ b/ios/sushain/Info.plist
@@ -63,6 +63,14 @@
 		<string>Inika-Regular.ttf</string>
 		<string>Inter-Light.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>This app required your camera for take your picture</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>This app would like to access your photos</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app would like to access your photos</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app required your microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
