--- a/ios/sushain/Info.plist
+++ b/ios/sushain/Info.plist
@@ -51,12 +51,6 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Camera permission description</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Microphone permission description</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Bold.ttf</string>
@@ -67,6 +61,16 @@
 		<string>Inika-Regular.ttf</string>
 		<string>Inter-Light.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+    <string>This app required your camera for take your picture</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>This app would like to access your photos</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app would like to access your photos</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app required your microphone</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app required your location for get your address</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
