--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/themed": "^1.0.37",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.2",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/progress-view": "^1.4.2",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/messaging": "^18.8.0",
@@ -45,6 +46,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-get-location": "^4.0.1",
+    "react-native-image-crop-picker": "^0.40.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localization": "^2.3.2",
