--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.6",
+    "react-native-device-country": "^1.0.4",
     "react-native-device-info": "^10.12.0",
     "react-native-document-picker": "^9.1.0",
     "react-native-dotenv": "^3.4.9",
