--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.9",
@@ -50,6 +51,7 @@
     "react-native-get-location": "^4.0.1",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localization": "^2.3.2",
     "react-native-localize": "^3.0.6",
@@ -65,6 +67,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
