code push code added

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,3 +10,6 @@ project(':rnwebrtc').projectDir = new File(rootProject.projectDir, '../node_modu
 include ':rnfgservice'
 project(':rnfgservice').projectDir = new File(rootProject.projectDir, '../node_modules/@videosdk.live/react-native-foreground-service/android')
 
+//code push
+include ':app', ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
