--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,8 +80,8 @@ android {
         applicationId "com.sushain.marketplace"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.0.0"
 
          //image crop picker    
         vectorDrawables.useSupportLibrary = true
@@ -107,6 +107,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+             resValue "string", "CodePushDeploymentKey", '"TvxBazlUE064PPChN79P3le_vdJCZ5y-Ta4Bl"'
         }
        
         release {
@@ -115,6 +116,7 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            resValue "string", "CodePushDeploymentKey", '"TvxBazlUE064PPChN79P3le_vdJCZ5y-Ta4Bl"'
         }
     }
 }
@@ -137,3 +139,5 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+//code push
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
