--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,8 @@
 {"$schema": "./node_modules/@react-native-firebase/app/firebase-schema.json",
     "react-native": {
-      "messaging_ios_auto_register_for_remote_messages": true
-    }
+      "messaging_ios_auto_register_for_remote_messages": true,
+      "crashlytics_debug_enabled": true
+    },
+  
+  
   }
