--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,3 +10,6 @@ project(':rnwebrtc').projectDir = new File(rootProject.projectDir, '../node_modu
 include ':rnfgservice'
 project(':rnfgservice').projectDir = new File(rootProject.projectDir, '../node_modules/@videosdk.live/react-native-foreground-service/android')
 
+// //analytics Firebase
+// include ':@react-native-firebase_analytics'
+// project(':@react-native-firebase_analytics').projectDir = new File(rootProject.projectDir, './../node_modules/@react-native-firebase/analytics/android')
