--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-community/progress-view": "^1.4.2",
+    "@react-native-firebase/analytics": "^19.1.0",
     "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/crashlytics": "^19.1.0",
     "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
